--- a/requirements-startup.txt
+++ b/requirements-startup.txt
@@ -9,6 +9,7 @@ bs4
 bwb==3.0.0
 cfscrape
 coffeehouse
+covid
 cowpy
 cryptg
 dnspython
@@ -23,7 +24,7 @@ googletrans>=2.4.0
 gsearch
 hachoir
 heroku3
-httplib2<0.16.0
+httplib2>=0.18.0
 humanize
 lxml
 oauth2client
@@ -51,4 +52,3 @@ asyncurban
 urbandict
 wikipedia>=1.4.0
 youtube-dl
-covid
